--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   flutter_bloc: ^8.1.3
   json_serializable: ^6.7.1
   flutter_color: ^2.1.0
+  lottie: ^2.6.0
+  kartal: ^3.2.0
+  
 
 
 dev_dependencies:
@@ -36,8 +39,8 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/animation/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
