--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   lottie: ^2.6.0
   kartal: ^3.2.0
   font_awesome_flutter: ^10.5.0
+  url_launcher: ^6.1.12
   
 
 
@@ -42,7 +43,7 @@ flutter:
 
   assets:
     - assets/animation/
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
