--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   url_launcher: ^6.1.12
   share_plus: ^7.1.0
+  
+ 
 
 
   
@@ -35,6 +37,18 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  
+
+ 
+
+  
+   
 
 
 flutter:
